# ewatercycle-leakybucket

./: 01_raw_bmi.ipynb  02_ewatercycle_local_model.ipynb  03_ewatercycle_container_model.ipynb  04_ewatercycle_container_model.ipynb  Dockerfile  README.md  plugin_guide.md  pyproject.toml
notebooks/: 01_raw_bmi.ipynb  03_local_grpc4bmi.ipynb  04_containerized_model.ipynb  05_finished_ewatercycle_plugin.ipynb
src/ewatercycle_defaultmodel/: default_bmi.py  default_model.py
src/ewatercycle_leakybucket/: model.py
src/ewatercycle_plugin/: toymodel.py
src/leakybucket/: __init__.py  empty_bmi.py  ewatercycle_models.py  leakybucket_bmi.py  utils.py
tests/: __init__.py
