[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ewatercycle_defaultmodel"
description = "Template project for starting a new eWaterCycle plugin"
license = "Apache-2.0"
version = "0.0.1"
authors = [
  { name = "Peter Kalverla", email = "p.kalverla@esciencecenter.nl" },
]

# Include here only the dependencies for the BMI Model
# This is used to run the BmiModel inside the container
dependencies = [
  "bmipy",
  "numpy",
  "xarray",
]

# Additional dependencies used with pip install .[plugin]
[project.optional-dependencies]
ewatercycle = [
  "ewatercycle",
  "pyyaml",
  "cftime",
]

# This registers the plugin such that it is discoverable by eWaterCycle
[project.entry-points."ewatercycle.models"]
DefaultModel = "ewatercycle_defaultmodel.default_model:DefaultModel"
